<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/file_save">
        <SwitchPreferenceCompat
                android:disableDependentsState="true"
                android:key="save_enable"
                android:title="@string/use_default_file" />

        <Preference
                android:dependency="save_enable"
                android:key="save_path"
                android:title="@string/rewrite_file_path" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/advanced_setting">
        <SwitchPreferenceCompat
                android:key="hook_dump"
                android:summary="@string/hook_dump_desc"
                android:title="@string/hook_dump" />
        <SwitchPreferenceCompat
                android:key="fix_code_item"
                android:summary="@string/fix_code_item_desc"
                android:title="@string/fix_code_item" />


    </PreferenceCategory>


</PreferenceScreen>